Fix icon alignment in TreeView and Preview on Windows

--- a/styles/icons/preview.less
+++ b/styles/icons/preview.less
@@ -12,7 +12,7 @@
         margin-right: 10px;
 
         .platform-win32 & {
-          margin-top: 12px;
+          margin-top: 0;
         }
       }
     }
